ip adress search onload added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
           <span class="data-info"></span>
         </div>
 
-        <div class="temp flex-row big-img" style="justify-content: center">
+        <div
+          class="temp flex-row big-img flex-wrap"
+          style="justify-content: center"
+        >
           <span class="big-number">
             <span class="c"></span>
             <span class="f"></span>
@@ -106,7 +109,7 @@
     </div>
     <div class="today-hourly flex-row"></div>
 
-    <div class="big-img flex-row">
+    <div class="big-img flex-row flex-wrap">
       <div class="flex-column sunrise">
         <img src="sunrise.png" alt="sunrise" />
         <span></span>
